# intl-soccer-rankings

./: .gitignore  package-lock.json  package.json  prisma.config.ts  vercel.json
.githooks/: pre-push
app/: globals.css  layout.tsx  page.tsx
backtest/: pyproject.toml
backtest/backtest/data/: features.py  loader.py  tournaments.py
backtest/backtest/ensemble/: stacker.py
backtest/backtest/evaluation/: metrics.py  report.py  walk_forward.py
backtest/backtest/models/: base.py  prediction_utils.py
backtest/backtest/models/dynamic/: fivethirtyeight.py  importance_weighted_pi.py  kalman_filter.py
backtest/backtest/models/elo/: elo_base.py  fifa_elo.py  goal_weighted_elo.py  margin_optimized_elo.py  recency_weighted_elo.py  vanilla_elo.py
backtest/backtest/models/feature_based/: composite_features.py  market_value.py  squad_depth.py
backtest/backtest/models/ml/: catboost_model.py  logistic_l1.py  ml_base.py  random_forest.py  xgboost_model.py
backtest/backtest/models/poisson/: bivariate_poisson.py  dixon_coles.py  independent_poisson.py  negative_binomial.py  ordered_probit.py  poisson_base.py  zero_inflated.py
backtest/backtest/models/ratings/: berrar.py  glicko2.py  trueskill_model.py  whole_history.py
backtest/scripts/: run_backtest.py
components/: navbar.tsx  providers.tsx
lib/: api-football.ts  berrar-engine.ts  bt-engine.ts  composite-engines.ts  glicko2-engine.ts  iw-pi-engine.ts  market-alignment.ts  market-observations.ts  market-odds.ts  mo-elo-engine.ts  ordered-probit-engine.ts  pi-ratings.ts  prediction-engine.ts  prisma.ts  (+6 more)
(+89 files in other folders)
