[project]
name = "intl-soccer-backtest"
version = "0.1.0"
description = "Backtest pipeline for international soccer prediction models"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "trueskill>=0.4.5",
    "matplotlib>=3.7",
]

[project.scripts]
run-backtest = "scripts.run_backtest:main"
